package com.team2.mentalhealthtracker.model;

public enum SleepQuality {
    GOOD,
    OKAY,
    POOR
}