@startuml

class CheckInController {
  +createCheckIn(checkIn) : CheckIn
  +getCheckIns() : List<CheckIn>
}

class AiRecommendationController {
  +getRecommendation() : AiRecommendationResponse
}

class ResourceController {
  +getSupportResources() : ResourceResponse
}

class AiRecommendationService {
  +generateSuggestion(recentCheckIns) : String
  +detectLowMoodPattern(recentCheckIns) : boolean
}

class ResourceService {
  +getProfessionalResources() : List<String>
}

interface CheckInRepository {
  +save(checkIn) : CheckIn
  +findAll() : List<CheckIn>
  +findTop7ByOrderByCreatedAtDesc() : List<CheckIn>
}

class ThirdPartyAiClient {
  +requestRecommendation(prompt) : String
}

class CheckIn {
  -id : Long
  -moodScore : Integer
  -stressLevel : Integer
  -sleepQuality : SleepQuality
  -journalNotes : String
  -triggers : String
  -copingStrategiesUsed : String
  -createdAt : LocalDateTime
}

enum SleepQuality {
  GOOD
  OKAY
  POOR
}

class AiRecommendationResponse {
  -label : String
  -suggestion : String
}

class ResourceResponse {
  -message : String
  -resourceLinks : List<String>
}

CheckInController --> CheckInRepository
AiRecommendationController --> AiRecommendationService
AiRecommendationService --> CheckInRepository
AiRecommendationService --> ThirdPartyAiClient
ResourceController --> ResourceService
CheckIn --> SleepQuality
AiRecommendationController --> AiRecommendationResponse
ResourceController --> ResourceResponse

@enduml